# oz-auth

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHECKLIST.md  CODEBASE_REVIEW.md  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md  SECURITY_AUDIT_PLAN.md  TODO.md  WHITEPAPER.md  build.mjs  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: security.yml  windows.yml
docs/: backward-compatibility-plan.md  test-coverage-improvement-plan.md
src/: main.js
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: audit.toml  config.toml
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: decode_secret.rs  decrypt.rs  parse_uri.rs
src-tauri/icons/: build_icns.py  fingerprint.icns  icon.icns
src-tauri/src/: audit.rs  config.rs  crypto.rs  diagnostics.rs  lib.rs  main.rs  paths.rs  test_utils.rs  tests_integration.rs  tray.rs
src-tauri/src/commands/: accounts.rs  auth.rs  mod.rs  totp.rs
src-tauri/src/commands/accounts/: crud.rs  qr.rs
src-tauri/src/models/: account.rs
src-tauri/src/storage/: auth_file.rs  mod.rs
src-tauri/src/utils/: mod.rs  otpauth.rs
src-tauri/tests/fixtures/: auth_data_v1_snapshot.json
src/js/: accounts.js  clipboard.js  dragdrop.js  lock.js  qr-scanner.js  settings.js  totp.js
src/js/__tests__/: accounts.test.js  clipboard.test.js  dragdrop.test.js  lock.test.js  main.test.js  settings.test.js  setup.js  totp.test.js
src/styles/: main.css  themes.css
